# syndridcli

./: AGENTS.md  SYNDRID_ORCHESTRATION.md  SYNDRID_ORCHESTRATION_O0_AUDIT.md  SYNDRID_REFERENCE_REPOS.md
banners/: BUILD.bazel  README.md  home.txt  input-plan.txt  input-regular.txt  layout.toml  theme.toml
codex-rs/: Cargo.toml
codex-rs/app-server-daemon/src/: lib.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  lib.rs  login.rs  main.rs  provider_cmd.rs  provider_cmd_tests.rs  remote_control_cmd.rs  routing_cmd.rs  state_db_recovery.rs
codex-rs/cli/tests/: branding.rs  update.rs
codex-rs/core/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/orchestration/: BUILD.bazel  Cargo.toml
codex-rs/orchestration-adapter/: BUILD.bazel  Cargo.toml
codex-rs/orchestration-adapter/src/: cancellation.rs  capabilities.rs  error.rs  handoff.rs  identity.rs  lib.rs  o2a_tests.rs  o2b_tests.rs  observation.rs  operation.rs  spawn.rs
codex-rs/orchestration/src/: agent.rs  budget.rs  domain_tests.rs  event.rs  handoff.rs  ids.rs  ids_tests.rs  lib.rs  mode.rs  o1b_tests.rs  permissions.rs  recommendation.rs  routing.rs  sequential.rs  sequential_tests.rs  state.rs  verification.rs
codex-rs/tui/: AGENTS.md  BUILD.bazel
codex-rs/tui/src/: app.rs  (+15 more)
docs/: phase-1-audit.md  phase-1-branding-boundary.md  phase-2-distribution.md
docs/design/: syndrid-tui-surface-inventory.md  syndrid-ui-rework.md
docs/development/: current-state.md
docs/product/: syndrid-vision.md
docs/research/: external-feature-audit.md  provenance-policy.md  syndrid-feature-roadmap.md
(+100 files in other folders)
