[package]
edition.workspace = true
license.workspace = true
name = "codex-orchestration"
version.workspace = true

[lib]
doctest = false
name = "codex_orchestration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
